--- a/creative-theory-logo.html
+++ b/creative-theory-logo.html
@@ -26,7 +26,7 @@
      }
  }
  
- path#c {
+ /*path#c {
     animation: fadeOut .25s ease-out 2s forwards;
  }
  
@@ -80,7 +80,7 @@
  
   #y  {
     animation: fadeOut .25s ease-out 5.25s forwards;
- }
+ }*/
  
  
  
