--- a/creative-theory-logo.html
+++ b/creative-theory-logo.html
@@ -1,11 +1,13 @@
  <style>
  svg {
- height:200px;
- width:200px;
- animation: rotate 10s linear infinite;
+ height:188px;
+ width:185px;
+   animation: rotate 10s linear infinite;
+  transform-origin: center center;
  }
+ 
  svg path {
- fill:#000;
+ fill:#161A22;
  }
  
  @keyframes fadeOut {
